2001-04-24  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* Makefile.am (guile_TEXINFOS): Added srfi-13-14.texi.

	* srfi-13-14.texi: New file documenting SRFI-13/14.

	* guile.texi (Top): Added the SRFI-13/14 menu entry and @include.

2001-04-22  Neil Jerram  <neil@ossau.uklinux.net>

	* posix.texi (Network Sockets and Communication): Automatic
	docstring updates for `socket' and `connect'.  (For IPV6 support.)

	* scheme-io.texi: Remove old docstring comments referring to
	r4rs.scm.

	* appendices.texi (The Basic Guile Package, Packages not shipped
	with Guile), env.texi (Switching to Environments), format.texi
	(Format Specification), gh.texi
	(Executing Scheme code, Calling Scheme procedures from C),
	guile-tut.texi (How to characterize Guile), scheme-data.texi
	(Symbols, Keywords, Keyword Read Syntax, Append/Reverse),
	scheme-evaluation.texi (Delayed Evaluation), scheme-modules.texi
	(Scheme and modules), scheme-io.texi (Soft Ports): Change R4RS
	references to R5RS.

	* r4rs.texi: Removed.
	
	* Makefile.am (info_TEXINFOS): Remove r4rs.

	* README: Note removal of r4rs, and provide a reference.

	* scheme-control.texi (Exceptions): Extended documentation.
	(Continuations): Correct "except" typo, and fix reference to
	Exceptions node.  Plus minor review changes.

2001-04-20  Neil Jerram  <neil@ossau.uklinux.net>

	* scheme-control.texi (Exceptions): Reorganized and extended
	existing documentation; more to come.

2001-04-20  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* scheme-evaluation.texi (Comments): Document normal comments and
	comment conventions.
	(Block Comments): Documented multiline comments.
	(Case Sensitivity): Documented R5RS and Guile behaviour and how to
	switch it off.

	* scheme-control.texi (Continuations): Added some documentation
	for call/cc.
	(Exceptions): Added xref to `Continuations'.

	* scheme-binding.texi (Binding Reflection): Typo fix.

2001-04-20  Neil Jerram  <neil@ossau.uklinux.net>
